[package]
name = "community-id"
version = "0.1.0"
edition = "2021"
authors = ["Julian Wang <traceflight@outlook.com>"]
readme = "README.md"
keywords = ["community-id", "flow"]
repository = "https://github.com/traceflight/rs-community-id"
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libc = "0.2"
lazy_static = "1.4.0"
sha1 = "0.10.5"
base64 = "0.21.0"
hex = "0.4.3"
num_enum = "0.6.1"