[package]
name = "community-id"
version = "0.2.3"
edition = "2021"
authors = ["Julian Wang <traceflight@outlook.com>"]
readme = "README.md"
keywords = ["community-id", "flow", "hash", "network"]
repository = "https://github.com/traceflight/rs-community-id"
categories = ["network-programming"]
description = "This package provides a Rust implementation of the open Community ID flow hashing standard."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
phf = { version = "0.13.1", features = ["macros"] }
sha1 = "0.10.5"
